--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: addtask-api
-        image: mdcontainerregistry.azurecr.io/addtask-api:v1
+        image: mdcontainerregistry.azurecr.io/md-addtasks-api:v1
         ports:
         - containerPort: 8000
