--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: addtask-api-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: addtask-api
   ports:
