--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -14,6 +14,6 @@ spec:
         path: "/"
         backend:
           service:
-            name: addtask-api
+            name: addtask-api-service
             port: 
               number: 80
